@@ -75,10 +75,3 @@ scatter_mod.o : fft_types.o
 stick_base.o : fft_param.o
 tg_gather.o : fft_param.o
 tg_gather.o : fft_types.o
-fft_stick.o : 
-fft_stick.o : 
-fftw.o : 
-fftw_dp.o : 
-fftw_dp.o : 
-fftw_sp.o : 
-fftw_sp.o : 
