@@ -23,7 +23,7 @@ subroutine init_us_2_max (npw_, igk_, q_, vkb_)
   USE cell_base,  ONLY : tpiba, omega
   USE constants,  ONLY : tpi
   USE gvect,      ONLY : eigts1, eigts2, eigts3, mill, g
-  USE us,         ONLY : nqx, dq, tab, tab_d2y, spline_ps
+  USE uspp_data,  ONLY : nqx, dq, tab, tab_d2y, spline_ps
   USE m_gth,      ONLY : mk_ffnl_gth
   USE splinelib
   USE uspp,       ONLY : nkb, nhtol, nhtolm, indv
