@@ -52,6 +52,7 @@ atomic_wfc_nc_proj.o : ../../Modules/recvec.o
 atomic_wfc_nc_proj.o : ../../PW/src/atomic_wfc_mod.o
 atomic_wfc_nc_proj.o : ../../PW/src/pwcom.o
 atomic_wfc_nc_proj.o : ../../upflib/uspp.o
+atomic_wfc_nc_proj.o : ../../upflib/uspp_data.o
 average.o : ../../FFTXlib/fft_scalar.o
 average.o : ../../Modules/cell_base.o
 average.o : ../../Modules/constants.o
@@ -631,6 +632,7 @@ pw2gw.o : ../../UtilXlib/mp.o
 pw2gw.o : ../../UtilXlib/parallel_include.o
 pw2gw.o : ../../upflib/splinelib.o
 pw2gw.o : ../../upflib/uspp.o
+pw2gw.o : ../../upflib/uspp_data.o
 pw2wannier90.o : ../../FFTXlib/fft_interfaces.o
 pw2wannier90.o : ../../FFTXlib/scatter_mod.o
 pw2wannier90.o : ../../Modules/becmod.o
