@@ -20,7 +20,7 @@ SUBROUTINE atomic_wfc( ik, wfcatom )
   USE gvect,            ONLY : mill, eigts1, eigts2, eigts3, g
   USE klist,            ONLY : xk, igk_k, ngk
   USE wvfct,            ONLY : npwx
-  USE us,               ONLY : tab_at, dq
+  USE uspp_data,        ONLY : tab_at, dq
   USE uspp_param,       ONLY : upf
   USE noncollin_module, ONLY : noncolin, npol, angle1, angle2
   USE spin_orb,         ONLY : lspinorb, rot_ylm, fcoef, lmaxx, domag, &
