@@ -2791,7 +2791,7 @@ MODULE exx
   USE constants,     ONLY : tpi
   USE gvect,         ONLY : eigts1, eigts2, eigts3, mill, g
   USE wvfct,         ONLY : npwx, nbnd
-  USE us,            ONLY : nqx, dq, tab, tab_d2y, spline_ps
+  USE uspp_data,     ONLY : nqx, dq, tab, tab_d2y, spline_ps
   USE m_gth,         ONLY : mk_ffnl_gth
   USE splinelib
   USE uspp,          ONLY : nkb, nhtol, nhtolm, indv
