@@ -21,7 +21,7 @@ SUBROUTINE gen_us_dy( ik, u, dvkb )
   USE gvect,       ONLY: mill, eigts1, eigts2, eigts3, g
   USE wvfct,       ONLY: npwx
   USE uspp,        ONLY: nkb, indv, nhtol, nhtolm
-  USE us,          ONLY: nqx, tab, tab_d2y, dq, spline_ps
+  USE uspp_data,   ONLY: nqx, tab, tab_d2y, dq, spline_ps
   USE splinelib
   USE uspp_param,  ONLY: upf, lmaxkb, nbetam, nh
   !
