@@ -139,6 +139,7 @@ allocate_nlpot.o : ../../Modules/ions_base.o
 allocate_nlpot.o : ../../Modules/noncol.o
 allocate_nlpot.o : ../../Modules/recvec.o
 allocate_nlpot.o : ../../upflib/uspp.o
+allocate_nlpot.o : ../../upflib/uspp_data.o
 allocate_nlpot.o : pwcom.o
 allocate_wfc.o : ../../Modules/gvecw.o
 allocate_wfc.o : ../../Modules/io_global.o
@@ -174,6 +175,7 @@ atomic_wfc.o : ../../Modules/noncol.o
 atomic_wfc.o : ../../Modules/recvec.o
 atomic_wfc.o : ../../UtilXlib/mp.o
 atomic_wfc.o : ../../upflib/uspp.o
+atomic_wfc.o : ../../upflib/uspp_data.o
 atomic_wfc.o : atomic_wfc_mod.o
 atomic_wfc.o : pwcom.o
 atomic_wfc_mod.o : ../../Modules/kind.o
@@ -284,6 +286,7 @@ clean_pw.o : ../../upflib/gth.o
 clean_pw.o : ../../upflib/pseudo_types.o
 clean_pw.o : ../../upflib/radial_grids.o
 clean_pw.o : ../../upflib/uspp.o
+clean_pw.o : ../../upflib/uspp_data.o
 clean_pw.o : Coul_cut_2D.o
 clean_pw.o : atomic_wfc_mod.o
 clean_pw.o : bp_mod.o
@@ -385,7 +388,7 @@ divide_et_impera.o : ../../Modules/kind.o
 divide_et_impera.o : ../../Modules/mp_pools.o
 dqvan2.o : ../../Modules/kind.o
 dqvan2.o : ../../upflib/uspp.o
-dqvan2.o : pwcom.o
+dqvan2.o : ../../upflib/uspp_data.o
 drhoc.o : ../../Modules/constants.o
 drhoc.o : ../../Modules/kind.o
 dvloc_of_g.o : ../../Modules/constants.o
@@ -577,6 +580,7 @@ exx.o : ../../upflib/gth.o
 exx.o : ../../upflib/paw_variables.o
 exx.o : ../../upflib/splinelib.o
 exx.o : ../../upflib/uspp.o
+exx.o : ../../upflib/uspp_data.o
 exx.o : buffers.o
 exx.o : exx_band.o
 exx.o : exx_base.o
@@ -829,6 +833,7 @@ gen_at_dj.o : ../../Modules/kind.o
 gen_at_dj.o : ../../Modules/recvec.o
 gen_at_dj.o : ../../upflib/atom.o
 gen_at_dj.o : ../../upflib/uspp.o
+gen_at_dj.o : ../../upflib/uspp_data.o
 gen_at_dj.o : atomic_wfc_mod.o
 gen_at_dj.o : pwcom.o
 gen_at_dy.o : ../../Modules/cell_base.o
@@ -839,6 +844,7 @@ gen_at_dy.o : ../../Modules/kind.o
 gen_at_dy.o : ../../Modules/recvec.o
 gen_at_dy.o : ../../upflib/atom.o
 gen_at_dy.o : ../../upflib/uspp.o
+gen_at_dy.o : ../../upflib/uspp_data.o
 gen_at_dy.o : atomic_wfc_mod.o
 gen_at_dy.o : pwcom.o
 gen_us_dj.o : ../../Modules/cell_base.o
@@ -849,6 +855,7 @@ gen_us_dj.o : ../../Modules/recvec.o
 gen_us_dj.o : ../../upflib/gth.o
 gen_us_dj.o : ../../upflib/splinelib.o
 gen_us_dj.o : ../../upflib/uspp.o
+gen_us_dj.o : ../../upflib/uspp_data.o
 gen_us_dj.o : pwcom.o
 gen_us_dy.o : ../../Modules/cell_base.o
 gen_us_dy.o : ../../Modules/constants.o
@@ -858,6 +865,7 @@ gen_us_dy.o : ../../Modules/kind.o
 gen_us_dy.o : ../../Modules/recvec.o
 gen_us_dy.o : ../../upflib/splinelib.o
 gen_us_dy.o : ../../upflib/uspp.o
+gen_us_dy.o : ../../upflib/uspp_data.o
 gen_us_dy.o : pwcom.o
 get_locals.o : ../../Modules/cell_base.o
 get_locals.o : ../../Modules/fft_base.o
@@ -1023,6 +1031,7 @@ init_us_2.o : ../../Modules/recvec.o
 init_us_2.o : ../../upflib/gth.o
 init_us_2.o : ../../upflib/splinelib.o
 init_us_2.o : ../../upflib/uspp.o
+init_us_2.o : ../../upflib/uspp_data.o
 init_us_2.o : pwcom.o
 init_vloc.o : ../../Modules/cell_base.o
 init_vloc.o : ../../Modules/ions_base.o
@@ -1062,6 +1071,7 @@ input.o : ../../Modules/wannier_new.o
 input.o : ../../Modules/wyckoff.o
 input.o : ../../dft-d3/api.o
 input.o : ../../dft-d3/dftd3_qe.o
+input.o : ../../upflib/uspp_data.o
 input.o : Coul_cut_2D.o
 input.o : a2fmod.o
 input.o : atomic_wfc_mod.o
@@ -1224,6 +1234,7 @@ memory_report.o : ../../Modules/recvec.o
 memory_report.o : ../../Modules/wannier_new.o
 memory_report.o : ../../upflib/atom.o
 memory_report.o : ../../upflib/uspp.o
+memory_report.o : ../../upflib/uspp_data.o
 memory_report.o : atomic_wfc_mod.o
 memory_report.o : exx.o
 memory_report.o : exx_base.o
@@ -1537,6 +1548,7 @@ plus_u_full.o : ../../Modules/noncol.o
 plus_u_full.o : ../../Modules/random_numbers.o
 plus_u_full.o : ../../Modules/recvec.o
 plus_u_full.o : ../../upflib/uspp.o
+plus_u_full.o : ../../upflib/uspp_data.o
 plus_u_full.o : atomic_wfc_mod.o
 plus_u_full.o : ldaU.o
 plus_u_full.o : pwcom.o
@@ -1709,7 +1721,6 @@ pw_restart_new.o : xdm_dispersion.o
 pwcom.o : ../../Modules/kind.o
 pwcom.o : ../../Modules/parameters.o
 pwcom.o : ../../upflib/upf_spinorb.o
-pwcom.o : ../../upflib/uspp_data.o
 pwscf.o : ../../Modules/command_line_options.o
 pwscf.o : ../../Modules/environment.o
 pwscf.o : ../../Modules/mp_global.o
@@ -1893,6 +1904,7 @@ scale_h.o : ../../Modules/kind.o
 scale_h.o : ../../Modules/mp_bands.o
 scale_h.o : ../../Modules/recvec.o
 scale_h.o : ../../UtilXlib/mp.o
+scale_h.o : ../../upflib/uspp_data.o
 scale_h.o : exx.o
 scale_h.o : exx_base.o
 scale_h.o : pwcom.o
