@@ -19,7 +19,7 @@ subroutine init_gipaw_1
   USE cell_base ,  ONLY : omega
   USE ions_base,   ONLY : nat, ntyp => nsp, ityp
   USE constants,   ONLY : fpi
-  USE us,          ONLY : dq, nqx, tab, tab_d2y, spline_ps
+  USE uspp_data,   ONLY : dq, nqx, tab, tab_d2y, spline_ps
   USE paw_gipaw,   ONLY : paw_recon, paw_nkb, paw_lmaxkb
   USE splinelib
   USE uspp,        ONLY : ap, aainit
