@@ -20,6 +20,7 @@ Fixed in development version:
 Incompatible changes in dev version:
   * lfcpopt & lfcpdyn are replaced by lfcp. Only static optimization of the
     Fermi energy works. Currently, molecular dynamics with FCP does not work.
+  * More pseudopotential-related code moved to upflib/
 
 New in 6.7 version:
   * Support for CMake (F. Ficarelli and D. Cesarini, CINECA, with help from
